--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -4,4 +4,12 @@
 	<welcome-file-list>
 		<welcome-file>/default/home/index.jsp</welcome-file>
 	</welcome-file-list>
+	<!-- <servlet>
+		<servlet-name>HomeController</servlet-name>
+		<jsp-file>/default/home/index.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>HomeController</servlet-name>
+		<url-pattern>/home</url-pattern>
+	</servlet-mapping> -->
 </web-app>
