--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <packaging>war</packaging>
 	<dependencies>
 		<dependency>
-			<groupId>jstl</groupId>
+			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 			<scope>compile</scope>
